# jsc

./: .gitignore  CMakeLists.txt  LICENCE  README.md  build.bash
configs/cfs/: jsc_cfs_global_types.h
configs/ros/: jsc_ros_global_types.h  jsc_ros_private.h
include/jsc/: jdct.h  jerror.h  jmemsys.h  jpegint.h  jpeglib.h  jsc_pub.h  jsc_types_pub.h  jversion.h
include/jsc/old/: jconfig.h  jmorecfg.h
src/: jcapimin.c  jcapistd.c  jccoefct.c  jccolor.c  jcdctmgr.c  jchuff.c  jcinit.c  jcmainct.c  jcmarker.c  jcmaster.c  jcomapi.c  jcparam.c  jcprepct.c  jcsample.c  jdapimin.c  jdapistd.c  jdatasrc.c  jdcoefct.c  jdcolor.c  jddctmgr.c  jdhuff.c  jdinput.c  jdmainct.c  jdmarker.c  jdmaster.c  jdmerge.c  jdpostct.c  jdsample.c  jfdctflt.c  jidctflt.c  jmemmgr.c  jsc_compress.c  jscdatadst.c  jscmemstatic.c  jutils.c
test/: GoogleTestCMakeLists.txt.in  ImageioCMakeLists.txt.in  KodakCMakeLists.txt.in  jsc_gtest.cpp  jsc_test_global_types.h  jsc_test_private.h
test/cfs/: common_types.h
test/output/: performance_jpeg.csv  performance_jpeg_devboard.csv  performance_jpeg_wsl.csv
test/output/coverage/: index-sort-f.html  index-sort-l.html  index.html
test/output/coverage/jpeg-safe/: index-sort-f.html  index-sort-l.html  index.html  jcapimin.c.func-sort-c.html  jcapimin.c.func.html  jcapimin.c.gcov.html  jcapistd.c.func-sort-c.html  jcapistd.c.func.html  jcapistd.c.gcov.html  jcarith.c.func-sort-c.html  jcarith.c.func.html  jcarith.c.gcov.html  jccoefct.c.func-sort-c.html  jccoefct.c.func.html  jccoefct.c.gcov.html  jccolor.c.func-sort-c.html  jccolor.c.func.html  jccolor.c.gcov.html  jcdctmgr.c.func-sort-c.html  jcdctmgr.c.func.html  jcdctmgr.c.gcov.html  jchuff.c.func-sort-c.html  jchuff.c.func.html  jchuff.c.gcov.html  jcinit.c.func-sort-c.html  jcinit.c.func.html  jcinit.c.gcov.html  jcmainct.c.func-sort-c.html  jcmainct.c.func.html  jcmainct.c.gcov.html  jcmarker.c.func-sort-c.html  jcmarker.c.func.html  jcmarker.c.gcov.html  jcmaster.c.func-sort-c.html  jcmaster.c.func.html  jcmaster.c.gcov.html  jcomapi.c.func-sort-c.html  jcomapi.c.func.html  jcomapi.c.gcov.html  jcparam.c.func-sort-c.html  (+98 more)
test/output/coverage/src/: index-sort-f.html  index-sort-l.html  index.html  jcapimin.c.func-sort-c.html  jcapimin.c.func.html  jcapimin.c.gcov.html  jcapistd.c.func-sort-c.html  jcapistd.c.func.html  jcapistd.c.gcov.html  jcarith.c.func-sort-c.html  jcarith.c.func.html  jcarith.c.gcov.html  jccoefct.c.func-sort-c.html  jccoefct.c.func.html  jccoefct.c.gcov.html  jccolor.c.func-sort-c.html  jccolor.c.func.html  jccolor.c.gcov.html  jcdctmgr.c.func-sort-c.html  jcdctmgr.c.func.html  jcdctmgr.c.gcov.html  jchuff.c.func-sort-c.html  jchuff.c.func.html  jchuff.c.gcov.html  jcinit.c.func-sort-c.html  jcinit.c.func.html  jcinit.c.gcov.html  jcmainct.c.func-sort-c.html  jcmainct.c.func.html  jcmainct.c.gcov.html  jcmarker.c.func-sort-c.html  jcmarker.c.func.html  jcmarker.c.gcov.html  jcmaster.c.func-sort-c.html  jcmaster.c.func.html  jcmaster.c.gcov.html  jcomapi.c.func-sort-c.html  jcomapi.c.func.html  jcomapi.c.gcov.html  jcparam.c.func-sort-c.html  (+107 more)
